--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.24.1",
+    "@popperjs/core": "^2.11.8",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "bootstrap": "5.1.3",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.11.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
